examples/resolver/checker/fail/logical_requires_boolean.axo
const bad = 1 && 2
print(bad)
